# nano-banana-sdk

./: CONTRIBUTING.md  README.md
go/: README.md  go.mod
go/nanobanana/: client.go  client_test.go  contract_gen.go  slug.go  types.go
java/: README.md  settings.gradle.kts
java/runapi-nano-banana/: build.gradle.kts
java/runapi-nano-banana/src/main/java/ai/runapi/nanobanana/: NanoBananaClient.java
java/runapi-nano-banana/src/test/java/ai/runapi/nanobanana/: NanoBananaClientTest.java  NanoBananaLiveApiSmokeTest.java  NanoBananaLocalApiSmokeTest.java
js/: README.md  package.json
js/manual-tests/: .env.example  README.md  test-all.ts  test-edit.ts  test-error-handling.ts  test-generation-base.ts  test-generation-pro.ts  test-polling.ts
js/skills/nano-banana/: README.md  SKILL.md
js/src/: client.ts  contract_gen.ts  index.ts  types.ts
js/src/resources/: edit-image.ts  text-to-image.ts
js/tests/unit/: client.test.ts  edit-image.test.ts  text-to-image.test.ts
python/: README.md  pyproject.toml
python/src/runapi/nano_banana/: __init__.py  client.py  contract_gen.py  types.py
python/src/runapi/nano_banana/resources/: __init__.py  edit_image.py  text_to_image.py
python/tests/: test_client.py
ruby/: README.md  runapi-nano-banana.gemspec  runapi-nano_banana.gemspec
ruby/examples/: nano_banana_example.rb  nano_banana_image.rb
ruby/lib/: runapi-nano_banana.rb
ruby/lib/runapi/: nano_banana.rb
ruby/lib/runapi/nano_banana/: client.rb  contract_gen.rb  types.rb
ruby/lib/runapi/nano_banana/resources/: edit_image.rb  text_to_image.rb
(+15 files in other folders)
