[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "runapi-nano-banana"
version = "0.1.0"
description = "Nano Banana text-to-image and edit-image client for RunAPI"
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
authors = [{ name = "RunAPI", email = "contact@runapi.ai" }]
keywords = ["runapi", "nano-banana", "text-to-image", "edit-image", "ai", "sdk"]
dependencies = ["runapi-core"]

[project.urls]
Homepage = "https://runapi.ai/models/nano-banana"
Documentation = "https://runapi.ai/docs#sdk-nano-banana"

[tool.hatch.build.targets.wheel]
packages = ["src/runapi"]

[tool.uv]
package = true

[tool.uv.sources]
runapi-core = { workspace = true }

[dependency-groups]
dev = ["pytest>=8"]

[tool.runapi]
slug = "nano-banana"
